@startuml
class Ex2 {
+ Void main()
}

class Ex2_1 {
+ createTextFiles() :String[]
+ getNumOfLines() : int
+ getNumOfLinesThreads() : int
+ getNumOfLinesThreadPool() : int
}

class MyThread {
- fileName : String
- numLines : int
+ MyThread (fileName : String)
+ getNumLines() : int
+ run() : void

}

class MyThreadCallable {
- fileName : String
- numLines : int
+ MyThreadCallable (fileName : String)
+ call() : int
}

class Thread {
+ run() : void
}

interface Callable {
+ call() : Integer
}

class MyThread extends Thread
class MyThreadCallable implements Callable
MyThread --o Ex2_1
MyThreadCallable --o Ex2_1
Ex2_1 --> Ex2
@enduml